  - add SPVM::Cloner
  - SPVM::Util::copy_oarray do deep clone using SPVM::Cloner.
  - SPVM::Stringer argument change ($self : self) to ($self : self, $obj : object)
  - add SPVM::Regex::Replacer and use this in SPVM::Regex::replace_cb and SPVM::Regex::replace_all_cb method
  - subroutine belongging to package with callback_t descriptor must be anon subroutine.
0.0440 2019-09-06
  - Rename SPVM::Data to SPVM::BlessedObject
  - Rename SPVM::Data::Array to SPVM::BlessedObject::Array
  - Rename SPVM::Data::Package to SPVM::BlessedObject::Package
  - remove SPVM::Util->split 3rd argument
  - rename SPVM::Time->mktime to SPVM::Time->timelocal
  - fix SPVM::Regex character class negation bug
  - fix SPVM::Regex * capture bugs
  - SPVM::Regex caps start index become 0
  - remove to_iarray and to_strarray from SPVM::List
  - rename SPVM::List to SPVM::ObjectList
  - rename SPVM::ObjectList::new_with_capacity to new_capacity
  - add SPVM::ByteList::new_capacity
  - add SPVM::ShortList::new_capacity
  - add SPVM::IntList::new_capacity
  - add SPVM::LongList::new_capacity
  - add SPVM::FloatList::new_capacity
  - add SPVM::DoubleList::new_capacity
  - add SPVM::StringList::new_capacity
  - add SPVM::ByteList::capacity
  - add SPVM::ShortList::capacity
  - add SPVM::IntList::capacity
  - add SPVM::LongList::capacity
  - add SPVM::FloatList::capacity
  - add SPVM::DoubleList::capacity
  - add SPVM::StringList::capacity
  - add SPVM::ObjectList::capacity
  - add insert, remove method to SPVM::ByteList, SPVM::ShortList, SPVM::IntList, SPVM::LongList, SPVM::FloatList, SPVM::DoubleList, SPVM::StringList, SPVM::ObjectList
  
0.0439 2019-08-05
  - rename runtime_type to runtime_type_category
  - fix IO::Socket connect with IP address bug
  - cleanup SPVM::MIME::Base64 interface
      package SPVM::MIME::Base64 {
        sub new : SPVM::MIME::Base64 () {
          return new SPVM::MIME::Base64;
        }
        
        native sub encode : string ($self : self, $string : string);